--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -6,81 +6,249 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-
     <com.hula.myapplication.widget.HuLaActionBar
         android:id="@+id/action_bar"
         style="@style/defActionBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="@dimen/dimen_13"
         app:acb_enableBack="false"
         app:acb_title="">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|start"
+            android:layout_marginStart="8dp"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|start"
-                android:paddingHorizontal="@dimen/dimen_19"
-                android:text="@string/cancle"
-                android:textColor="@color/color_2e2e2e"
-                android:textSize="13dp" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:elevation="5dp"
+                android:src="@mipmap/icon_persion_null"
+                app:shapeAppearance="@style/CircleStyle" />
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dimen_26"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="@dimen/dimen_12"
                 android:layout_weight="1"
-                android:layout_gravity="center_vertical"
-                android:background="@drawable/select_edit_bg"
-                android:padding="@dimen/dimen_1"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tv_preview"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:background="@drawable/selector_tab_left"
-                    android:text="@string/preview"
-                    android:textSize="13dp"
-                    android:textColor="@drawable/selector_setting_switch" />
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="name"
+                    android:textColor="@color/color_2e2e2e"
+                    android:textSize="13dp" />
 
                 <TextView
-                    android:id="@+id/tv_edit"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:background="@drawable/selector_tab_right"
-                    android:text="@string/edit"
-                    android:textSize="13dp"
-                    android:textColor="@drawable/selector_setting_switch" />
-
+                    android:id="@+id/tv_member"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="Member since 2019"
+                    android:textColor="@color/color_2e2e2e"
+                    android:textSize="13dp" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_done"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|end"
-                android:paddingHorizontal="@dimen/dimen_19"
-                android:text="@string/done"
-                android:textColor="@color/app_main_color"
-                android:textSize="13dp" />
-
         </LinearLayout>
+
 
     </com.hula.myapplication.widget.HuLaActionBar>
 
-    <com.hula.myapplication.widget.NoScrollViewPager
-        android:id="@+id/viewpager_mine"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="@null">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingHorizontal="@dimen/dimen_35">
+
+            <LinearLayout
+                android:id="@+id/ll_profile"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_40"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:background="@mipmap/icon_profile" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/dimen_15"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@string/profile"
+                    android:textColor="@color/color_5C5C5C"
+                    android:textSize="@dimen/dimen_18" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_preference"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_40"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:background="@mipmap/icon_prefercences" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/dimen_15"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@string/preference"
+                    android:textColor="@color/color_5C5C5C"
+                    android:textSize="@dimen/dimen_18"
+                   />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_invite_friend"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_40"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:background="@mipmap/icon_invite_friend" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/dimen_15"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@string/invite_friends"
+                    android:textColor="@color/color_5C5C5C"
+                    android:textSize="@dimen/dimen_18"
+                   />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_account_privacy"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_40"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:background="@mipmap/icon_privacy" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/dimen_15"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@string/account_privacy"
+                    android:textColor="@color/color_5C5C5C"
+                    android:textSize="@dimen/dimen_18"
+                     />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_what_new"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_40"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:background="@mipmap/icon_what_new" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/dimen_15"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@string/what_new"
+                    android:textColor="@color/color_5C5C5C"
+                    android:textSize="@dimen/dimen_18"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_help_center"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_40"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:background="@mipmap/icon_help_center" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/dimen_15"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@string/help_center"
+                    android:textColor="@color/color_5C5C5C"
+                    android:textSize="@dimen/dimen_18"
+               />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_log_out"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_40"
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:background="@mipmap/icon_log_out" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/dimen_15"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="@string/log_out"
+                    android:textColor="@color/color_5C5C5C"
+                    android:textSize="@dimen/dimen_18"
+                     />
+            </LinearLayout>
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
